[FIX] web,*: whitespaces in form/kanban templates
*: crm,link_tracker,project,sale,utm

Before this commit, in some form and kanban views, there were
missing whitespaces, typically between icons and texts. This was
due to the transition to owl views, because we simply ignored
`&amp;nbsp;` in archs. This commit also fixes a layout issue in
a project view, where the icon and the field should be displayed
in the same line.

closes odoo/odoo#101040

X-original-commit: f5813e348b6052436a4fabaa5837ecc37b15430e
Related: odoo/enterprise#31746

--- a/addons/utm/static/src/scss/utm_views.scss
+++ b/addons/utm/static/src/scss/utm_views.scss
@@ -4,8 +4,6 @@
     --KanbanGroup-padding-bottom: #{$grid-gutter-width};
 
     #o_utm_actions {
-        margin: 0 calc(var(--KanbanRecord-padding-h) * -1);
-
         > a {
             padding: var(--KanbanRecord-gap-inner-v) var(--KanbanRecord-padding-h);
             white-space: nowrap;
